fix: Dark mode fixes

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,4 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -24,10 +25,10 @@ code {
         background: hsl(0, 0%, 21%);
     }
     .tile .notification .title {
-        color: hsl(0, 0%, 7%) !important;
+        color: hsl(0, 0%, 7%);
     }
     footer,
     .title {
-        color: hsl(0, 0%, 86%) !important;
+        color: hsl(0, 0%, 86%);
     }
 }
